[package]
name = "ethrs"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[workspace]
members = [
  "transport/common",
  "transport/http",
  "transport/mock",
]

[features]
default = ["http", "mock"]
http = ["ethrs-transport-http"]
mock = ["ethrs-transport-mock"]

[dependencies]
ethrs-transport-common = { path = "transport/common", version = "0.1.0" }
ethrs-transport-http = { path = "transport/http", version = "0.1.0", optional = true }
ethrs-transport-mock = { path = "transport/mock", version = "0.1.0", optional = true }
hex = "0.4"
lifeguard = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
