[package]
name = "ethrs"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[profile.release]
lto = true

[workspace]
members = [
  "num",
  "num/bench",
  "num/intrinsics",
  "transport",
  "transport/http",
]

[features]
default = ["http", "mock"]
http = ["ethrs-transport-http"]
mock = []

[dependencies]
ethrs-transport = { path = "transport", version = "0.1.0" }
ethrs-transport-http = { path = "transport/http", version = "0.1.0", optional = true }
hex = "0.4.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
thiserror = "1.0.20"

[dev-dependencies]
futures = "0.3.5"
