[package]
name = "ethrs-transport-http"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[dependencies]
ethrs-transport = { path = "..", version = "0.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.64"
js-sys = "0.3.41"
wasm-bindgen-futures = "0.4.14"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.41"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
