[package]
name = "ethrs-transport-http"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"

[dependencies]
ethrs-transport = { path = "..", version = "0.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.44"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.17"

